
[project]
name = "CheckMate"
version = "0.1.3"
description = "CheckMate is an AutoML library which catches and warns of problems with your data and problem setup before modeling."
authors = [
    {name = "Nabil Fayak", email = "nabil.fayak@alteryx.com"},
]
dependencies = [
    "numpy<=1.23.5,>=1.21.0",
    "pandas>=1.5.0",
    "woodwork[dask]>=0.22.0",
    "click>=8.0.0",
]
requires-python = ">=3.8,<3.10"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.optional-dependencies]
docs = [
    "docutils<0.17,>=0.15.2",
    "pydata-sphinx-theme>=0.3.1",
    "astroid<=2.6.6",
    "Sphinx>=4.5.0",
    "nbconvert>=6.4.5",
    "nbsphinx<0.9.0,>=0.8.5",
    "sphinx-autoapi>=1.8.3",
    "sphinx-inline-tabs==2022.1.2b11",
    "sphinx-copybutton==0.4.0",
    "myst-parser==0.16.1",
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
